[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/PlayerConcept3.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Fonts/pixelmix.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/afterImage2.png" type="Texture" id=4]
[ext_resource path="res://Player/Afterimage.tscn" type="PackedScene" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 3 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[node name="Player" type="RigidBody2D" groups=["Player"]]
mode = 2
mass = 0.5
gravity_scale = 3.5
contacts_reported = 1
contact_monitor = true
script = ExtResource( 2 )
sideThrust = 20
afterimageThreshold = 1800
afterImage = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 17.0
margin_top = 10.0
margin_right = 57.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 11 )

[connection signal="body_entered" from="." to="." method="_on_collision"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_frame_changed"]
